--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 <body>
     <div class = container>
-        <div class = "player-1">
-            Player 1 (800)
+        <div class = player-timer> 
+            <div class = "player-1">
+                Player 1 (800)
+            </div>
+            <div class = "timer">
+                10:00
+            </div>
         </div>
         <div class = "grid-container">
             <div class = "grid-item"></div>
@@ -86,8 +91,13 @@
             <div class = "grid-item"></div>
             <div class = "grid-item"></div>
         </div>
-        <div class = "player-2">
-            Player 2 (810)
+        <div class = player-timer> 
+            <div class = "player-2">
+                Player 2 (810)
+            </div>
+            <div class = "timer">
+                10:00
+            </div>
         </div>
     </div>
 </body>
