Add reversi variants

--- a/index.html
+++ b/index.html
@@ -8,95 +8,124 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class = container>
-        <div class = player-timer> 
-            <div class = "player-1">
-                Player 1 (800)
+    <div class = "page">
+        <div class = "container">
+            <div class = "player-timer"> 
+                <div class = "player-1">
+                    Player 1 (800)
+                </div>
+                <div class = "timer">
+                    10:00
+                </div>
             </div>
-            <div class = "timer">
-                10:00
+            <div class = "grid-container">
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item">
+                    <span class = black-piece></span>
+                </div>
+                <div class = "grid-item">
+                    <span class = white-piece></span>
+                </div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item">
+                    <span class = white-piece></span>
+                </div>
+                <div class = "grid-item">
+                    <span class = black-piece></span>
+                </div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+                <div class = "grid-item"></div>
+            </div>
+            <div class = player-timer> 
+                <div class = "player-2">
+                    Player 2 (810)
+                </div>
+                <div class = "timer">
+                    10:00
+                </div>
             </div>
         </div>
-        <div class = "grid-container">
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item">
-                <span class = black-piece></span>
+        <div class = "modes">
+            <div class = "mode-block">
+                <span style="color: white">Time Control</span>
+                <div class = "time-button">
+                <button>5 minutes</button>
+                <button>10 minutes</button>
+                <button>20 minutes</button>
+                </div>
             </div>
-            <div class = "grid-item">
-                <span class = white-piece></span>
+            <div class = "mode-block">
+                <span style="color: white">Grid size</span>
+                <div class = "grid-button">    
+                <button>8 x 8</button>
+                <button>10 x 10</button>
+                <button>15 x 15</button>
+                <button>20 x 20</button>
+                </div>
             </div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item">
-                <span class = white-piece></span>
-            </div>
-            <div class = "grid-item">
-                <span class = black-piece></span>
-            </div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-            <div class = "grid-item"></div>
-        </div>
-        <div class = player-timer> 
-            <div class = "player-2">
-                Player 2 (810)
-            </div>
-            <div class = "timer">
-                10:00
+            <div class = "mode-block">
+                <span style="color: white">Variants</span>
+                <div class = "variant-button">    
+                <button>Obstruction reversi!</button>
+                <button>Random reversi!</button>
+                <button>Reverse reversi!</button>
+                </div>
             </div>
         </div>
     </div>
