Add friend's list

--- a/index.html
+++ b/index.html
@@ -113,19 +113,30 @@
             <div class = "mode-block">
                 <span style="color: white">Grid size</span>
                 <div class = "grid-button">    
-                <button>8 x 8</button>
-                <button>10 x 10</button>
-                <button>15 x 15</button>
-                <button>20 x 20</button>
+                    <button>8 x 8</button>
+                    <button>10 x 10</button>
+                    <button>15 x 15</button>
+                    <button>20 x 20</button>
                 </div>
             </div>
             <div class = "mode-block">
                 <span style="color: white">Variants</span>
                 <div class = "variant-button">    
-                <button>Obstruction reversi!</button>
-                <button>Random reversi!</button>
-                <button>Reverse reversi!</button>
+                    <button>Obstruction reversi!</button>
+                    <button>Random reversi!</button>
+                    <button>Reverse reversi!</button>
                 </div>
+            </div>
+            <div class = "mode-block">
+                <span style="color: white">Friends</span>
+                <ol class = "friend-list" type = "1">    
+                    <li>Bob (1000)</li>
+                    <button>Invite ></button>
+                    <li>John (810)</li>
+                    <button>Invite ></button>
+                    <li>Mark (800)</li>
+                    <button>Invite ></button>
+                </ol>
             </div>
         </div>
     </div>
