Add features to cosmetic page

--- a/Taskbar/cosmetic.html
+++ b/Taskbar/cosmetic.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="cosmetic.css">
 </head>
 <body>
+    <div class = "container">
+        <span style="margin-left: 100px">Board cosmetics</span>
+        <div class = "board-cosmetic">
+            <div class = "color-block">
+                <span style = "color: rgb(81, 115, 89)">Green</span>
+                <img src = ../green.png>
+            </div>
+            <div class = "color-block">
+                <span style = "color: rgb(115, 81, 81)">Red</span>
+                <img src = ../red.png>
+            </div>
+            <div class = "color-block">
+                <span style = "color: rgb(86, 81, 115)">Blue</span>
+                <img src = ../blue.png>
+            </div>
+        </div>
+    </div>
+    <div></div>
     
 </body>
 </html>
