--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <ul>
+        <li class = cosmetic><a href="Taskbar/cosmetic.html">Cosmetics</a></li>    
+    </ul>
     <div class = "page">
         <div class = "container">
             <div class = "player-timer"> 
