Add piece cosmetic section

--- a/Taskbar/cosmetic.html
+++ b/Taskbar/cosmetic.html
@@ -8,19 +8,39 @@
 </head>
 <body>
     <div class = "container">
-        <span style="margin-left: 100px">Board cosmetics</span>
-        <div class = "board-cosmetic">
-            <div class = "color-block">
-                <span style = "color: rgb(81, 115, 89)">Green</span>
-                <img src = ../green.png>
+        
+        <div>
+            <span style="margin-left: 100px; font-family: fantasy;">Board cosmetics</span>
+            <div class = "board-cosmetic">
+                <div class = "color-block">
+                    <span style = "color: rgb(81, 115, 89)">Green</span>
+                    <img src = ../green.png>
+                </div>
+                <div class = "color-block">
+                    <span style = "color: rgb(115, 81, 81)">Red</span>
+                    <img src = ../red.png>
+                </div>
+                <div class = "color-block">
+                    <span style = "color: rgb(86, 81, 115)">Blue</span>
+                    <img src = ../blue.png>
+                </div>
             </div>
-            <div class = "color-block">
-                <span style = "color: rgb(115, 81, 81)">Red</span>
-                <img src = ../red.png>
-            </div>
-            <div class = "color-block">
-                <span style = "color: rgb(86, 81, 115)">Blue</span>
-                <img src = ../blue.png>
+        </div>
+        <div>
+            <span style="margin-left: 100px; font-family: fantasy">Piece cosmetics</span>
+            <div class = "board-cosmetic">
+                <div class = "color-block">
+                    <span style = "color: rgb(115, 114, 81)">Lightning icon </span>
+                    <img src = ../lightning.png>
+                </div>
+                <div class = "color-block">
+                    <span style = "color: rgb(127, 184, 119)">Star icon </span>
+                    <img src = ../star.png>
+                </div>
+                <div class = "color-block">
+                    <span style = "color: rgb(213, 73, 73)">Heart icon </span>
+                    <img src = ../heart.png>
+                </div>
             </div>
         </div>
     </div>
